--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "sequelize": "^6.22.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.22.0",
+    "sqlite3": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
